[package]
name = "ejaan-rs"
version = "0.2.0"
edition = "2024"
authors = ["noaione <noaione@n4o.xyz>"]
description = "A Rust library for spell checking and suggestions using Native system implementation (Windows and macOS)."
readme = "README.md"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.17", default-features = false, features = ["napi9"] }
napi-derive = "2.16.13"

[target.'cfg(target_os = "windows")'.dependencies]
# Windows specific dependencies
windows = { version = "0.61.3", default-features = false, features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Globalization",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies
objc2 = "0.6.1"
objc2-app-kit = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSSpellChecker"
] }
objc2-foundation = { version = "0.3.1", default-features = false, features = [
    "std",
    "NSObjCRuntime"
] }

[build-dependencies]
napi-build = "2.2.1"

[profile.release]
lto = true
strip = "symbols"
opt-level = "s"
